# MSST-WebUI

./: .dockerignore  Dockerfile  pyproject.toml  webUI.py
inference/: preset_infer.py
tools/webUI_for_clouds/: webUI_for_clouds.py
