[project]
name = "MSST-WebUI"
version = "1.7.0"
description = "This is a webUI for Music-Source-Separation-Training (MSST), which is a repository for training models for music source separation."
readme = "README.md"
authors = [
]
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.7.0",
    "asteroid==0.7.0",
    "audiomentations==0.24.0",
    "auraloss>=0.4.0",
    "beartype==0.14.1",
    "bitsandbytes>=0.46.0",
    "colorama>=0.4.6",
    "demucs==4.0.0",
    "einops==0.6.1",
    "fastapi==0.111.0",
    "gradio==4.38.1",
    "huggingface-hub>=0.23.0",
    "librosa==0.9.2",
    "lightning>=2.0.0",
    "mido>=1.3.3",
    "ml-collections>=1.1.0",
    "omegaconf==2.2.3",
    "pedalboard~=0.8.1",
    "prodigyopt>=1.1.2",
    "protobuf==3.20.3",
    "psutil>=7.0.0",
    "pydantic<2.11",
    "rotary-embedding-torch==0.3.5",
    "sageattention==1.0.6",
    "samplerate>=0.2.1",
    "scipy>=1.15.3",
    "segmentation-models-pytorch==0.3.3",
    "soundfile>=0.13.1",
    "spafe==0.3.2",
    "timm==0.9.2",
    "torch>=2.5.1",
    "torch-audiomentations>=0.12.0",
    "torch-log-wmse>=0.3.0",
    "torchaudio>=2.5.1",
    "torchmetrics==0.11.4",
    "torchseg>=0.0.1a1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
    "transformers~=4.35.0",
]

[tool.ruff]
target-version = "py310"
line-length = 200

[tool.ruff.format]
indent-style = "tab"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N"]
ignore = ["E501"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121" }
]
torchvision = [
  { index = "pytorch-cu121" }
]
torchaudio = [
  { index = "pytorch-cu121" }
]
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
